# PurrLauncher

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  LICENSE  MinecraftLauncher.rc  PurrLauncher.msi  README.md  SECURITY.md  archive.cpp  config.cpp  config.example.json  config.json  crypto.cpp  download.cpp  java.cpp  logging.cpp  main.cpp  minecraft.cpp  plugin_downloader.cpp
.github/workflows/: build.yml
include/: archive.h  config.h  crypto.h  download.h  java.h  logging.h  minecraft.h
